@@ -19,6 +19,9 @@ Glade_DATA = gnome-mouse-properties.glade
 iconsdir   = $(GNOMECC_ICONS_DIR)
 icons_DATA = mouse-capplet.png
 
+desktop_iconsdir = $(datadir)/pixmaps
+desktop_icons_DATA = mouse-capplet.png
+
 desktopdir = $(GNOMECC_DESKTOP_DIR)
 Desktop_in_files = mouse.desktop.in
 desktop_DATA = $(Desktop_in_files:.desktop.in=.desktop)
@@ -26,3 +29,4 @@ desktop_DATA = $(Desktop_in_files:.desktop.in=.desktop)
 INCLUDES   = $(GNOMECC_CAPPLETS_CFLAGS)
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES)
 EXTRA_DIST = $(Glade_DATA) $(icons_DATA) $(Desktop_in_files) $(pixmap_DATA)
+
